--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -3,5 +3,6 @@
 
 <%= simple_form_for @list do |f| %>
   <%= f.input :name %>
+  <%= f.input :photo %>
   <%= f.button :submit, class: "btn btn-primary"%>
 <% end %>
